switch buttons added

--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,10 @@
           </div>
           <div class="exchange-item-row percent-change">
             <p>Percent change</p>
-            <p>Percent-change</p>
+            <label class="switch">
+              <input type="checkbox" class="checkbox" onclick="toggleCheck()">
+              <span class="slider round"></span>
+            </label>
           </div>
           <div class="exchange-item-row change-row">
             <p>Hour change</p>
@@ -73,7 +76,10 @@
           </div>
           <div class="exchange-item-row percent-change">
             <p>Percent change</p>
-            <p>Percent-change</p>
+            <label class="switch">
+              <input type="checkbox" class="checkbox" onclick="toggleCheck()">
+              <span class="slider round"></span>
+            </label>
           </div>
           <div class="exchange-item-row change-row">
             <p>Hour change</p>
@@ -101,7 +107,10 @@
           </div>
           <div class="exchange-item-row percent-change">
             <p>Percent change</p>
-            <p>Percent-change</p>
+            <label class="switch">
+              <input type="checkbox" class="checkbox" onclick="toggleCheck()">
+              <span class="slider round"></span>
+            </label>
           </div>
           <div class="exchange-item-row change-row">
             <p>Hour change</p>
